// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`metadata helper should compile 1`] = `
"---
id: xyz
title: xyx's title
sidebar_label: xyx's title
---
"
`;

exports[`metadata helper should escape strings that start with an @ 1`] = `
"---
id: xyz
title: '@scoped/package\\\\'s title'
sidebar_label: '@scoped/package\\\\'s title'
---
"
`;
